force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/RTL_Branch_Manager_Batch_Job__c.object-meta.xml
<CustomObject>
    <label>Branch Manager Batch Job</label>
    <nameField>
        <displayFormat>BMJ-{000000}</displayFormat>
        <label>Branch Manager Batch Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branch Manager Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>