force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/fields/RTL_Branch_Manager_Details__c.field-meta.xml
<CustomField>
    <fullName>RTL_Branch_Manager_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Manager Details</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>