force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/fields/RTL_Message__c.field-meta.xml
<CustomField>
    <fullName>RTL_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>