force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/fields/RTL_Record_Failed__c.field-meta.xml
<CustomField>
    <fullName>RTL_Record_Failed__c</fullName>
    <label>Record Failed</label>
    <summaryFilterItems>
        <field>RTL_Branch_Manager_Batch_Details__c.RTL_Status__c</field>
        <operation>equals</operation>
        <value>Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>RTL_Branch_Manager_Batch_Details__c.RTL_Branch_Manager_Batch_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>