force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/fields/RTL_Record_Processed__c.field-meta.xml
<CustomField>
    <fullName>RTL_Record_Processed__c</fullName>
    <label>Record Processed</label>
    <summaryForeignKey>RTL_Branch_Manager_Batch_Details__c.RTL_Branch_Manager_Batch_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>