force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/fields/RTL_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>