force-app/main/default/objects/RTL_Branch_Manager_Batch_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTL_Record_Processed__c</columns>
    <columns>RTL_Record_Failed__c</columns>
    <columns>RTL_Record_Success__c</columns>
    <columns>RTL_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>